--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,20 @@
 spring.application.name=Taka
-
+server.port=8088
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/taka
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3309/taka
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=190103
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.show-sql= true
 
 # server.servlet.session.timeout
 spring.session.jdbc.initialize-schema=always
 spring.session.store-type=jdbc
 spring.session.jdbc.table-name=SPRING_SESSION
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+cloudinary.cloud-name=dxsbwkbnb
+cloudinary.api-key=244446442551574
+cloudinary.api-secret=xcCF33qVOoUCha_VvXXFo2WWcfc
