home page, product-detail, login and register page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.servlet.multipart.max-request-size=10MB
 cloudinary.cloud-name=dxsbwkbnb
 cloudinary.api-key=244446442551574
 cloudinary.api-secret=xcCF33qVOoUCha_VvXXFo2WWcfc
+
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
+
